crates/knf/tests/snapshots/cli__non_finite_in_json_error.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"a.toml\", \"-f\", \"json\"])"
---
error: cannot serialize non-finite number to JSON
  --> timeout: `inf`
  --> backoff[1]: `nan`
help: emit TOML with -f toml, which can represent inf and nan
