crates/knf/tests/snapshots/cli__null_in_toml_error.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"base.toml\", \"override.json\", \"-f\", \"toml\"])"
---
error: cannot serialize null to TOML
  --> servers.primary.proxy   (from override.json)
  --> logging.sink            (from override.json)
help: emit JSON with -f json, or remove the null
