crates/knf/tests/snapshots/cli__set_null_on_toml_is_an_error.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"f.toml\", \"--set\", \"proxy=null\"])"
---
error: cannot serialize null to TOML
  --> proxy   (from --set proxy=null)
help: emit JSON with -f json, or remove the null
