crates/knf/tests/snapshots/cli__set_with_an_array_index_errors_before_file_io.snap
---
source: crates/knf/tests/cli.rs
expression: err
---
error: `servers[0]` contains an array index; merge paths take keys only
help: -c takes KEY.PATH=VALUE; an index like servers[0] can be read
      by a ${...} reference but never written — put the value in a file instead
