crates/knf/tests/snapshots/cli__shallow_invalid_glob_errors_before_file_io.snap
---
source: crates/knf/tests/cli.rs
assertion_line: 1374
expression: err
---
error: invalid value 'servers[0' for '--shallow <PATTERN>': unclosed character class at byte 7; missing ']' (to match a literal '[', escape it as '\[' or '[[]')

For more information, try '--help'.
