crates/knf/tests/snapshots/cli__unreachable_rule_error_precedes_file_io.snap
---
source: crates/knf/tests/cli.rs
expression: err
---
error: rule at `db.plugins` can never fire: `db` is `replace`, which does not recurse
help: --append, --replace and --fail take the whole value at their path, so a rule below one can never fire
